[project]
name = "iap-diffusion-labs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celluloid>=0.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.0.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
